Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55177

macOS: Setting the drop action doesn't work when pressing modifier keys

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2
    • 5.6.1
    • GUI: Drag and Drop
    • None
    • macOS
    • macOS
    • 23ea54d861be1b68e5df4264c75e0e8d0f5d3c04

    Description

      Because Cocoa will filter the dragging operations depending on which modifier key is pressed, the value returned by -[QNSView draggingSourceOperationMaskForLocal:] may be overridden before we get a chance of reading it in any of the dragging event handlers.

      Run the attached example and see what happens when you press the Cmd key while dragging. Notice that the drop action is always set to CopyAction by the application, and so it should show.

      It's been reported that things work as expected on Windows.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            dedietri Gabriel de Dietrich (drgvond)
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes